// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly default unit is inches 1`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      <span
        className="value"
      >
        1.000", 1.000"
      </span>
    </p>
    <div
      className="tool-panel-body"
    >
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={25.4}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_width"
          isDoOnInput={false}
          max={400}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={25.4}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_height"
          isDoOnInput={false}
          max={375}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly default unit is inches 2`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      <span
        className="value"
      >
        1.000", 1.000"
      </span>
    </p>
    <div
      className="tool-panel-body collapsed"
    >
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={25.4}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_width"
          isDoOnInput={false}
          max={400}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={25.4}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_height"
          isDoOnInput={false}
          max={375}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly default unit is inches 3`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      <span
        className="value"
      >
        10.000", 10.000"
      </span>
    </p>
    <div
      className="tool-panel-body collapsed"
    >
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={254}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_width"
          isDoOnInput={false}
          max={400}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={254}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_height"
          isDoOnInput={false}
          max={375}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly default unit is inches 4`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      <span
        className="value"
      >
        3.937", 10.000"
      </span>
    </p>
    <div
      className="tool-panel-body collapsed"
    >
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={100}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_width"
          isDoOnInput={false}
          max={400}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={254}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_height"
          isDoOnInput={false}
          max={375}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly default unit is inches 5`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      <span
        className="value"
      >
        3.937", 3.937"
      </span>
    </p>
    <div
      className="tool-panel-body collapsed"
    >
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={100}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_width"
          isDoOnInput={false}
          max={400}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={100}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_height"
          isDoOnInput={false}
          max={375}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`should render correctly default unit is mm 1`] = `
<div
  className="tool-panel"
>
  <label
    className="controls accordion"
  >
    <input
      className="accordion-switcher"
      defaultChecked={true}
      type="checkbox"
    />
    <p
      className="caption"
      onClick={[Function]}
    >
      <span
        className="value"
      >
        25.4, 25.4 mm
      </span>
    </p>
    <div
      className="tool-panel-body"
    >
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={25.4}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_width"
          isDoOnInput={false}
          max={400}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
      <div
        className="control"
      >
        <span
          className="text-center header"
        />
        <UnitInput
          abbr={false}
          className={{}}
          defaultValue={25.4}
          disabled={false}
          displayMultiValue={false}
          forceUsePropsUnit={false}
          getValue={[Function]}
          id="array_height"
          isDoOnInput={false}
          max={375}
          min={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          step={1}
          type="text"
          unit="mm"
        />
      </div>
    </div>
  </label>
</div>
`;
